# PawDoc

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  APK_ASSET_FORENSICS.md  APK_PROVENANCE_REPORT.md  BATCH_01_REPORT.md  BATCH_02_REPORT.md  BATCH_03_REPORT.md  BATCH_04_REPORT.md  CI_VERIFICATION_REPORT.md  CLAUDE.md  DESIGN_ASSET_EXTRACTION_REPORT.md  DESIGN_COVERAGE_AUDIT.md  DEVICE_UI_COMPARISON_REPORT.md  DEVICE_VALIDATION_APPENDIX.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARS.md  FINAL_EXECUTION_LEDGER.md  FINAL_LAUNCH_HARDENING_REPORT.md  FINAL_RELEASE_VERDICT.md  FINAL_UI_IMPLEMENTATION_REPORT.md  FINAL_UI_INTEGRATION_REPORT.md  FOUNDER_STRATEGY_GUIDE.md  FUTURE_FEATURE_CATALOG.md  IMPLEMENTATION_CHANGELOG.md  LEGAL_CONTENT_APPENDIX.md  MERGE_AUTHORITY_REPORT.md  MERGE_AUTH_INVESTIGATION.md  Makefile  PAWDOC_AGENT_CLOSURE_AUDIT.md  PAWDOC_AGENT_EXECUTION_ROADMAP.md  PAWDOC_BETA_READINESS_VERDICT.md  PAWDOC_CLOSURE_STATE_REPORT.md  PAWDOC_DEVICE_BUG_FIX_REPORT.md  PAWDOC_DEVICE_VALIDATION_REPORT.md  PAWDOC_ENGINEERING_GO_REPORT.md  PAWDOC_ENVIRONMENT_AUDIT.md  PAWDOC_EXECUTION_MASTER_BLUEPRINT.md  (+60 more)
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
ai-service/app/: __init__.py  assistant.py  cache.py  config.py  embeddings.py  eval_harness.py  journal.py  logging_setup.py  main.py  media.py  models.py  moderation.py  pipeline.py  prompts.py  providers.py  safety.py  training_export.py
ai-service/app/core/: __init__.py  config.py  exceptions.py  logging.py  observability.py  sentry.py
ai-service/app/models/: __init__.py  schemas.py
ai-service/app/prompts/: __init__.py  breed_context.py  system_prompt.py
ai-service/app/routers/: __init__.py  analyze.py  health.py
ai-service/app/services/: __init__.py  claude_client.py  copy.py  gemini_client.py  orchestrator.py  parser.py  safety.py
ai-service/scripts/: dev.sh
ai-service/tests/: conftest.py  golden_set.json  test_analyze_router.py  test_assistant.py  test_auth.py  test_claude_caching.py  test_claude_client.py  test_config.py  test_copy.py  test_embeddings.py  test_emergency_override.py  test_exceptions.py  test_gemini_client.py  test_golden_set.py  test_health.py  test_invariant_no_dead_ends.py  test_journal.py  test_logging.py  test_main.py  test_moderation.py  test_observability.py  test_orchestrator.py  test_parser.py  test_pipeline.py  test_prompts.py  test_providers_payload.py  test_safety.py  test_sentry.py  test_service_hardening.py  test_survivability.py  test_training_export.py  test_video.py
docs/: app-store-metadata.md  architecture.md  ci-cd.md  deployment.md  environment-setup.md  event-catalog.md  local-development.md  operational-runbook.md  rollback-runbook.md
fastlane/: Appfile  Fastfile  Matchfile
infra/: r2-cors.json
memory/: PAST_DECISIONS.md  USER_PROFILE.md
mobile/: .gitignore  README.md  SMOKE.md  analysis_options.yaml  pubspec.yaml
reports/: ENVIRONMENT_VARS.md  GROWTH_STRATEGY.md  MONETIZATION_ANALYSIS.md  RISK_ANALYSIS.md  TECH_DECISIONS.md
roadmap/: APP_EXECUTION_ROADMAP.md  APP_EXECUTION_ROADMAP_DECOMPOSED.md
scripts/: doppler-bootstrap.sh  export-training-dataset.py  github-branch-protection.sh  r2-bootstrap.sh  run-eval.py  supabase-enable-extensions.sh  sync-secrets.sh  test-accuracy-views.sh  test-followup.sh  test-journals.sh  test-referral.sh  test-reminders.sh  test-rls.sh  test-semantic-cache.sh  verify-disclaimers.sh  verify-no-placeholders.sh  verify-phase-0.1.sh  verify-phase-0.2.sh  verify-phase-0.3.sh  verify-phase-0.4.sh  verify-phase-1.1.sh  verify-phase-1.2.sh  (+21 more)
(+587 files in other folders)
