[project]
name = "pawdoc-ai-service"
version = "0.1.0"
description = "PawDoc AI orchestration service — multi-tier pet health triage."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "PawDoc" }]

# Phase 0 keeps the dependency surface minimal:
#   - fastapi + uvicorn: HTTP server
#   - pydantic + pydantic-settings: typed I/O and env validation
#   - structlog: production logging
#   - httpx: outbound HTTP (AI providers, Supabase, etc. — Phase 1)
#   - python-multipart: required by FastAPI when handling form uploads
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "pydantic>=2.8.0,<3.0",
    "pydantic-settings>=2.4.0,<3.0",
    "structlog>=24.4.0,<26.0",
    "httpx>=0.27.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    # Phase 1D — error reporting. The [fastapi] extra wires the auto-
    # instrumentation middleware; no manual wrapping needed.
    "sentry-sdk[fastapi]>=2.18.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5,<1.0",
    "mypy>=1.11.0,<2.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.23.8,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "anyio>=4.4.0,<5.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ===== Ruff =================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",
    "S",    # bandit (security)
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PL",   # pylint
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert allowed (used by pytest)
    "PLR0913", # too many arguments — acceptable in FastAPI deps
    "PLR2004", # magic value comparison — too noisy for tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S311"]                    # test fixtures allowed to use simple secrets
"app/routers/*" = ["B008"]                              # FastAPI Depends() in defaults is the idiom
"app/services/orchestrator.py" = ["PLR0911"]            # tier-routing has natural early returns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ===== Mypy =================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ===== Pytest ===============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
